Cleanup and update dependencies in package-lock.json (#36)
* Cleanup and update dependencies in package-lock.json

Streamlined the project's dependencies by removing unused or outdated packages and their associated metadata, including versions, resolved URLs, integrity hashes, and license information. Upgraded remaining packages and adjusted Node.js version requirements to enhance maintainability and efficiency in dependency management.

* Update .gitignore and add package-lock.json

Updated the `.gitignore` file to include the `MigrationBackup/` directory, ensuring that its contents are ignored by Git. Added the `package-lock.json` file from `src/AiRecruiterCodeBase/dointo.airecruiter.web/` to be tracked by the repository.

* Update dependencies for improved performance

Removed outdated packages and added new ones to enhance functionality. This update ensures the project is up-to-date with the latest features and security patches.

* Update .gitignore and switch to Yarn for package management

- Added `MigrationBackup/` to .gitignore to exclude backup files.
- Removed `package-lock.json` and added `yarn.lock` to transition from npm to Yarn.

---------

Co-authored-by: Umair Tahir <theumairtahir@outlook.com>

--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/src/AiRecruiterCodeBase/dointo.airecruiter.web/package-lock.json
+/src/AiRecruiterCodeBase/dointo.airecruiter.web/yarn.lock
